# trainROS

./: .gitignore  .md  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/examples_rclpy/examples_rclpy_services/: package.xml  setup.cfg  setup.py
src/examples_rclpy/examples_rclpy_topics/examples_rclpy_topics/: composed.py
src/hello_world/: CMakeLists.txt  package.xml
src/hello_world/include/hello_world/: listener_no_main.cpp  talker.cpp  talker_listener_composition.cpp  talker_no_main.cpp  visibility_control.h
src/hello_world/src/: listener.cpp  sent_and_get_parameters.cpp  talker.cpp  talker_listener_composition.cpp  talker_with_service.cpp  talker_with_service_param.cpp
src/hello_world/src/hello_world_msgs/: CMakeLists.txt
src/hello_world_msgs/: CMakeLists.txt  package.xml
src/hello_world_msgs/srv/: SetMessage.srv
